<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/bb_main"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="11"
            android:orientation="vertical"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:weightSum="3"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvNumTot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:background="@color/blu_trasp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:clickable="true"
                    android:text="0" />

                <TextView
                    android:id="@+id/tvNumOK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:background="@color/green_trasp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:clickable="true"
                    android:text="0" />

                <TextView
                    android:id="@+id/tvNumKO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@color/red_trasp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2"
                android:weightSum="3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/tot" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/list_ok" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/list_ko" />

            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvListFile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp">

            </android.support.v7.widget.RecyclerView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="8">

                        <TextView
                            android:id="@+id/tvNumCompleted"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text=""
                            android:textSize="18sp" />

                        <ProgressBar
                            android:id="@+id/pb"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:progress="1"
                            android:progressDrawable="@drawable/progress_bar_drawable"
                            android:visibility="invisible" />

                    </RelativeLayout>

                    <ProgressBar
                        android:id="@+id/pbCircle"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:visibility="invisible"
                        android:background="@color/bb_end"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="right|center"
                    android:background="@color/transparent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvPath"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:hint="@string/selectFD"
                        android:background="@drawable/txt_border"
                        android:clickable="true"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/btnFile"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="@string/file"
                        android:textSize="10sp"
                        android:visibility="gone"
                        />

                    <Button
                        android:id="@+id/btnDir"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/directory"
                        android:textSize="10sp"
                        android:visibility="gone"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnStop"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="35dp"
                        android:text="@string/stop"
                        android:visibility="gone"
                        />

                    <Button
                        android:id="@+id/btnStartAndStop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:text="@string/start"
                        android:background="@color/start"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        />
                </LinearLayout>

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/player_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/black" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>


    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:paddingTop="135dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvListFile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:paddingTop="5dp">

                </android.support.v7.widget.RecyclerView>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    >

                    <TextView
                        android:id="@+id/tvNumCompleted"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text=""
                        />

                    <ProgressBar
                        android:id="@+id/pb"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:progress="1"
                        android:progressDrawable="@drawable/progress_bar_drawable"
                        android:visibility="invisible"
                        />


                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/pbCircle"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tvPath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:paddingLeft="5dp"
                    android:text="@string/selectFD"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/btnFile"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/file"
                    android:textSize="10sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnDir"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/directory"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnStop"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:text="@string/stop" />

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:text="@string/start" />

            </LinearLayout>

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/player_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/black" />

        </LinearLayout>
    -->

</android.support.constraint.ConstraintLayout>